# drama-highlight-editor

./: .env.example  .gitignore  README.md  pyproject.toml  setup.py
scripts/: setup-gitee.sh  setup-github.sh
skills/drama-highlight-editor/: SKILL.md
skills/drama-highlight-editor/references/: editing-criteria.md  json-schema.md  template-guide.md  troubleshooting.md
src/drama_cut/: __init__.py  analysis.py  asr.py  cli.py  compose.py  config.py  export.py  ffmpeg_utils.py  quality.py  review.py  schemas.py  templates.py  utils.py
src/drama_cut/provider/: ark.py
src/drama_cut/templates/: ancient_romance.txt  conflict.txt  content_clean.txt  cute_kids.txt  default.txt  family.txt  index.json  revenge.txt  romance.txt  suspense.txt
tests/: test_analysis_mock.py  test_cli.py  test_config.py  test_ffmpeg_integration.py  test_review.py  test_schemas.py  test_utils_templates.py
